# agentqa

./: .gitignore  AgentQA_Executive_Summary.docx  CLAUDE.md  LICENSE  MANIFEST.in  README.md  build_wheel.sh  pypi-token.example  pyproject.toml  setup.py
.claude/: launch.json  settings.local.json
.github/workflows/: publish.yml
docs/: CNAME  README.md  demo-viewer.html  guide.html  index.html  viewer.html
examples/: conftest.py
examples/adversarial_agent/: agents.py  scenario.yaml
examples/annotated/: 01_getting_started.yaml  02_fault_injection.yaml  03_full_scenario.yaml  agents.py
examples/negotiation/: agents.py  agents_clean.py  scenario.yaml  scenario_clean.yaml
examples/task_completion/: agents.py  scenario.yaml
examples/task_delegation/: agents.py  scenario.yaml  scenario_with_fault.yaml
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  data.ts  index.css  labels.ts  types.ts
frontend/src/components/: ChatView.tsx  CinematicIntro.tsx  ConstellationView.tsx  CostBreakdown.tsx  Dashboard.tsx  DiffView.tsx  FilterBar.tsx  InfoTip.tsx  IssuesPanel.tsx  MessagePanel.tsx  PropertiesPanel.tsx  ReplayControls.tsx  ScenarioHero.tsx  SpotlightView.tsx  StateTimeline.tsx  SwimlaneDiagram.tsx  TopologyGraph.tsx  VerdictBanner.tsx
frontend/src/hooks/: useReplay.ts
launch/: linkedin.md  linkedin_with_video.md  show_hn.md
product/: executive-overview.md  mvp-scope.md  roadmap.md
research/: agentqa-market-research-brief.md
skills/social-launch-posts/: SKILL.md
src/agentqa/: cli.py  display.py  engine.py  export.py  pytest_plugin.py  replay.py  scaffold.py  scenario.py  topology.py  trace.py
src/agentqa/adapters/: __init__.py  autogen.py  crewai.py  langgraph.py  raw.py
src/agentqa/faults/: __init__.py  base.py  (+5 more)
src/riftcheck/: agent.py  cli.py  display.py  engine.py  export.py  pytest_plugin.py  replay.py  scaffold.py  topology.py
tests/: test_engine.py  test_faults.py  test_init.py  test_models.py  test_properties.py  test_raw_adapter.py  test_v02_properties.py  test_v03_advanced.py  test_v03_properties.py  test_v04_features.py  test_v04_properties.py  test_v05_viewer.py
tests/integration/: README.md  conftest.py  test_autogen_real.py  test_crewai_real.py  test_langgraph_real.py
validation/: community-posts.md  developer-interview-script.md  github-signal-report.md
(+61 files in other folders)
