[build-system]
requires = ["setuptools>=68", "wheel", "Cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentqa"
version = "0.8.1"
description = "Multi-agent interaction testing framework — catch deadlocks, leaks, and role violations before production"
readme = "README.md"
requires-python = ">=3.10"
license = "LicenseRef-Proprietary"
authors = [
    {name = "Anmol Khandeparkar"},
]
keywords = ["testing", "multi-agent", "ai", "llm", "agents", "simulation", "property-testing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
    "click>=8.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
]

[project.scripts]
agentqa = "agentqa.cli:main"

[project.entry-points.pytest11]
agentqa = "agentqa.pytest_plugin"

[tool.setuptools.packages.find]
where = ["src"]
exclude = [".claude*", "frontend*"]

[tool.setuptools.package-data]
agentqa = ["viewer/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".claude", "frontend", "node_modules", "*.egg-info", "tests/integration"]

[tool.ruff]
line-length = 100
target-version = "py310"
